<resources>
    <string name="dynamic_more_share">分享</string>
    <string name="dynamic_more_notice">公告</string>
    <string name="dynamic_more_schedule">日程</string>
    <string name="dynamic_more_allot">工作分派</string>
    <string name="dynamic_more_plan">工作计划</string>
    <string name="dynamic_list_error">获取列表数据失败！</string>
    <string name="dynamic_select_vote">请先选择投票项！</string>
    <string name="dynamic_vote_success">投票成功！</string>
    <string name="dynamic_vote_error">投票失败！</string>
    <string name="dynamicdetail">动态详情</string>
    <string name="dynamicdetail_info_error">获取信息失败！</string>
    <string name="dynamicdetail_edittext_hint">说点什么吧~</string>
    <string name="dynamicdetail_comment_success">评论成功！</string>
    <string name="dynamicdetail_comment_error">评论失败！</string>
    <string name="dynamicdetail_collect_success">收藏成功！</string>
    <string name="dynamicdetail_collect_error">收藏失败！</string>
    <string name="dynamicdetail_cancelcollect_success">取消收藏成功！</string>
    <string name="dynamicdetail_cancelcollect_error">取消收藏失败！</string>
    <string name="dynamicdetail_more_delete">删除</string>
    <string name="dynamicdetail_commentlist_error">获取评论列表数据失败！</string>
    <string name="allot">新建工作分派</string>
    <string name="allot_taskname">名称</string>
    <string name="allot_taskname_hint">请输入任务名称</string>
    <string name="allot_finishtime">完成时间</string>
    <string name="allot_finishtime_hint">请选择完成时间</string>
    <string name="allot_responser">负责人</string>
    <string name="allot_executor">执行人</string>
    <string name="allot_add_person">添加人员</string>
    <string name="allot_empty_taskname">请输入任务名称！</string>
    <string name="allot_empty_finishtime">请选择完成时间！</string>
    <string name="allot_empty_responser">请添加负责人！</string>
    <string name="allot_finishtime_less_curtime">完成时间不能少于当前时间！</string>
    <string name="notice">新建公告</string>
    <string name="notice_content_hint">公告的内容...</string>
    <string name="plan">新建计划</string>
    <string name="plan_type">计划类型</string>
    <string name="plan_type_day">日计划</string>
    <string name="plan_type_week">周计划</string>
    <string name="plan_type_month">月计划</string>
    <string name="plan_name_hint">全新的一天来自你的新计划~</string>
    <string name="plan_time">开始时间</string>
    <string name="plan_time_hint">请选择开始时间</string>
    <string name="plan_add_plan">添加计划</string>
    <string name="plan_empty_name">请输入名称！</string>
    <string name="plan_empty_time">请选择日期！</string>
    <string name="share">新建分享</string>
    <string name="share_file">文件</string>
    <string name="share_add_file">添加文件</string>
    <string name="share_image">图片</string>
    <string name="share_add_image">添加图片</string>
    <string name="share_link">链接</string>
    <string name="share_linkurl">网址</string>
    <string name="share_linkurl_hint">请输入网址</string>
    <string name="share_linkdesc">描述</string>
    <string name="share_linkdesc_hint">请输入描述</string>
    <string name="share_vote">投票</string>
    <string name="share_vote_hint">请输入选项名称</string>
    <string name="share_add_vote">添加选项</string>
    <string name="share_empty_linkurl">请输入链接地址！</string>
    <string name="share_empty_linkdesc">请输入链接描述！</string>
    <string name="share_empty_votename">请输入投票项！</string>
    <string name="shareto">分享到Talker</string>
    <string name="file">知识库</string>
    <string name="file_myfile">我的文件</string>
    <string name="file_sharefile">共享给我的文件</string>
    <string name="file_cancelfile">作废的文件</string>
    <string name="file_share_success">分享成功！</string>
    <string name="file_share_error">分享失败！</string>
    <string name="filelist_more_create">新建文件夹</string>
    <string name="filelist_more_upload">上传文件</string>
    <string name="filelist_list_error">获取文件列表失败！</string>
    <string name="filelist_upload_success">上传文件成功！</string>
    <string name="filelist_upload_error">上传文件失败！</string>
    <string name="filelist_choose_title">请选择</string>
    <string name="filelist_choose_error">请安装文件管理器！</string>
    <string name="filecreate_name">名称</string>
    <string name="filecreate_desc">描述</string>
    <string name="filecreate_name_hint">请输入文件夹名称</string>
    <string name="filecreate_desc_hint">请输入文件夹描述</string>
    <string name="filecreate_empty_folder">请输入文件夹名称！</string>
    <string name="filecreate_success">创建文件夹成功！</string>
    <string name="filecreate_error">创建文件夹失败！</string>
    <string name="filedetail">文件详情</string>
    <string name="filedetail_sharerange_error">获取分享范围失败！</string>
    <string name="filedetail_relationcount_error">获取相关数量失败！</string>
    <string name="fileselect">选择</string>
    <string name="content_hint">今天怎么样？</string>
    <string name="empty_content_tips">内容不能为空！</string>
    <string name="share_range_hint">分享范围</string>
    <string name="publish_success">发表成功！</string>
    <string name="publish_error">发表失败！</string>
    <string name="tv_file_relation_tips">暂无相关文件</string>
    <string name="my_fa_bu">去Talker记录你的工作生活吧！</string>
    <string name="my_guang_zhu">还没有关注任何人？去通讯录找找看</string>
    <string name="my_collection">暂无收藏，到处去逛逛吧！</string>
    <string name="bzm">备注名</string>
    <string name="bzm_edittext_hint">请输入备注名</string>
    <string name="bzm_info_error">获取备注名失败！</string>
    <string name="bzm_submit_success">提交成功！</string>
    <string name="bzm_submit_error">提交失败！</string>
    <string name="contactselect">选择人员</string>
    <string name="contactselect_empty">请选择！</string>
    <string name="contactselect_list_error">获取人员列表信息失败！</string>
    <string name="groupinto">群信息</string>
    <string name="groupinto_send_text">发起群聊</string>
    <string name="groupinto_exit_text">退出群组</string>
    <string name="groupinto_delete_text">解散群组</string>
    <string name="groupinto_delete_success">解散成功！</string>
    <string name="groupinto_delete_error">解散失败！</string>
    <string name="groupinto_join_success">加入成功！</string>
    <string name="groupinto_join_error">加入失败！</string>
    <string name="groupinto_joinexist_tips">人员包含已加入成员，加入失败！</string>
    <string name="groupinto_exit_success">退出成功！</string>
    <string name="groupinto_exit_error">退出失败！</string>
    <string name="groupinto_relationcount_error">获取群组关联失败！</string>
    <string name="groupmember">群成员</string>
    <string name="groupmember_list_error">获取群成员列表信息失败！</string>
    <string name="groupcreate">新建群组</string>
    <string name="groupcreate_name_hint">群组名称</string>
    <string name="groupcreate_desc_hint">群组描述</string>
    <string name="groupcreate_private_text">私密性</string>
    <string name="groupcreate_empty_name">请输入群组名称！</string>
    <string name="groupcreate_success">创建成功！</string>
    <string name="groupcreate_error">创建失败！</string>
    <string name="groupselect">选择群组</string>
    <string name="groupuninto_join_text">加入该群</string>
    <string name="person">个人详情</string>
    <string name="person_more_info">更多信息</string>
    <string name="person_relationcount_error">获取关联数量失败！</string>
    <string name="person_updatehead_success">修改头像成功！</string>
    <string name="person_updatehead_error">修改头像失败！</string>
    <string name="person_follow_success">关注成功！</string>
    <string name="person_follow_error">关注失败！</string>
    <string name="person_cancelfollow_success">取消关注成功！</string>
    <string name="person_cancelfollow_error">取消关注失败！</string>
    <string name="personmore">更多信息</string>
    <string name="personmore_cancelfollow_text">取消关注</string>
    <string name="personmore_name_text">备注名</string>
    <string name="personmore_add_text">添加</string>
    <string name="relationproject">工作项目</string>
    <string name="relationproject_list_error">获取工作项目列表信息失败！</string>
    <string name="relationtask">相关任务</string>
    <string name="relationtask_list_error">获取相关任务列表信息失败！</string>
    <string name="relationcalendar">活动日程</string>
    <string name="relationcalendar_list_error">获取活动日程列表信息失败！</string>
    <string name="relationfile">相关文件</string>
    <string name="relationfile_list_error">获取知识库列表信息失败！</string>
    <string name="waithandle">待办工作</string>
    <string name="suggestion">意见反馈</string>
    <string name="suggestion_content_hint">请输入反馈，我们将为你不断改进</string>
    <string name="suggestion_contact_text">联系方式</string>
    <string name="suggestion_phoneormail_hint">填写你的手机或邮箱</string>
    <string name="suggestion_empty_content">意见内容不能为空！</string>
    <string name="suggestion_submit_success">提交成功！</string>
    <string name="mesetting">系统设置</string>
    <string name="mesetting_notice_text">通知</string>
    <string name="mesetting_message_text">接受消息</string>
    <string name="mesetting_voice_text">声音</string>
    <string name="mesetting_safe_text">安全</string>
    <string name="mesetting_password_text">修改密码</string>
    <string name="mechecking_title_text">验证原密码</string>
    <string name="mechecking_desc_text">为保证您的数据安全，修改密码前需验证原密码</string>
    <string name="mechecking_password_hint">密码</string>
    <string name="mechecking_password_error">密码错误请重新输入!</string>
    <string name="mechange">密码修改</string>
    <string name="mechange_empty_pwone">新密码不能为空！</string>
    <string name="mechange_empty_pwtwo">确认密码不能为空！</string>
    <string name="mechange_password_inconformity">密码不一致！</string>
    <string name="mechange_password_success">修改成功！</string>
    <string name="actionsheet_photo">拍照</string>
    <string name="actionsheet_pick">从相册选择</string>
    <string name="headupload_error">头像上传失败！</string>
    <string name="follow_tips">确认关注？</string>
    <string name="cancelfollow_tips">确认取消关注？</string>
    <string name="loading_dialog_tips1">正在登录，请稍等&#8230;</string>
    <string name="loading_dialog_tips2">正在加载&#8230;</string>
    <string name="loading_dialog_tips3">正在处理&#8230;</string>
    <string name="loading_dialog_tips4">正在上传&#8230;</string>
    <string name="loading_dialog_tips5">正在删除&#8230;</string>
    <string name="loading_dialog_tips6">正在创建&#8230;</string>
    <string name="download_tips">确定下载该文件？</string>
    <string name="download_fileexist_tips">该文件已存在！</string>
    <string name="deletefile_tips">确定删除该文件？</string>
    <string name="deletefile_success">删除文件成功！</string>
    <string name="deletefile_error">删除文件失败！</string>
    <string name="deleteimage_tips">确定删除该图片？</string>
    <string name="deletegroup_tips">确认解散群组？</string>
    <string name="deletedynamic_tips">确认删除该项？</string>
    <string name="deletedynamic_success">删除成功！</string>
    <string name="deletedynamic_error">删除失败！</string>
    <string name="openfile_error">无法打开该文件，请先下载能查看该文件的APK！</string>
    <string name="app_name">Talker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="warm_tips">温馨提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="setting">设置</string>
    <string name="download">下载</string>
    <string name="net_not_open">网络未开启!</string>
    <string name="search">搜索</string>
    <string name="unkonw">未知</string>
    <string name="send">发送</string>
    <string name="submit">提交</string>
    <string name="timeformat">yyyy年MM月dd日  HH时mm分</string>
    <string name="timeformat1">MM月dd日  HH时mm分</string>
    <string name="timeformat2">yyyy/MM/dd HH:mm:ss</string>
    <string name="timeformat3">HH:mm:ss</string>
    <string name="timeformat4">yyyy-MM-dd HH:mm:ss</string>
    <string name="timeformat5">yyyy-MM-dd</string>
    <string name="timeformat6">yyyy-MM-dd HH:mm</string>
    <string name="timeformat7">yyyy/MM/dd</string>
    <string name="timeformat8">yyyy/MM</string>
    <string name="timeformat14">yyyy/MM/dd HH:mm</string>
    <string name="timeformat9">MM-dd</string>
    <string name="timeformat10">yyyyMMddHHmmss</string>
    <string name="timeformat11">HH时mm分</string>
    <string name="login_hint_username">账号</string>
    <string name="login_hint_password">密码</string>
    <string name="login_hint_comcode">企业代码</string>
    <string name="login_copy_right_en">©2008&#8211;2016 EMW Corporation. </string>
    <string name="login_copy_right_ch">中天博日版权所有</string>
</resources>