<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_sharelink_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="gone" >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/cm_bg"
        android:paddingLeft="18dp"
        android:gravity="center_vertical"
        android:textColor="@color/dynamicadd_sharetitle_text"
       	android:textSize="13sp"
        android:text="@string/share_link"/>
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:orientation="vertical">
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="@color/dynamicadd_sharelink_text"
        	android:textSize="13sp"
        	android:text="@string/share_linkurl"/>
	    <EditText
	        android:id="@+id/et_sharelink_url"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:singleLine="true"
	        android:background="@null"
	        android:textColor="@color/cm_text"
        	android:textSize="14sp"
        	android:textColorHint="@color/cm_texthint"
        	android:hint="@string/share_linkurl_hint" />
	    <View 
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5dp"
		    android:background="@color/cm_divider_bg"/>
	</LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:orientation="vertical">
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="@color/dynamicadd_sharelink_text"
        	android:textSize="13sp"
        	android:text="@string/share_linkdesc"/>
	    <EditText
	        android:id="@+id/et_sharelink_desc"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:singleLine="true"
	        android:background="@null"
	        android:textColor="@color/cm_text"
        	android:textSize="14sp"
        	android:textColorHint="@color/cm_texthint"
        	android:hint="@string/share_linkdesc_hint" />
	</LinearLayout>
</LinearLayout>