<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/cm_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="100dp"
        android:background="@color/cm_dialogcontent_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mechecking_title_text"
            android:textColor="@color/cm_text"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/mechecking_desc_text"
            android:textColor="@color/cm_text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_checking_password"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/cm_button_bg"
            android:hint="@string/mechecking_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/cm_text"
            android:textColorHint="@color/cm_texthint"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_checking_cancel"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/cm_button_bg"
                android:text="@string/cancel"
                android:textColor="@color/cm_text"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_checking_ok"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/cm_button_bg"
                android:text="@string/ok"
                android:textColor="@color/cm_text"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>