<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cm_bg"
    android:orientation="vertical" >
    <include layout="@layout/cm_header_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filecreate_name"
            android:textColor="@color/filecreate_title_text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_filecreate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:hint="@string/filecreate_name_hint"
            android:textColor="@color/cm_text"
            android:textColorHint="@color/cm_texthint"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cm_divider_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/filecreate_desc"
            android:textColor="@color/filecreate_title_text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_filecreate_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:hint="@string/filecreate_desc_hint"
            android:textColor="@color/cm_text"
            android:textColorHint="@color/cm_texthint"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>