<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cm_bg"
    android:orientation="vertical" >

    <include layout="@layout/cm_header_bar" />

    <EditText
        android:id="@+id/et_suggestion_content"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/suggestion_content_hint"
        android:paddingTop="12dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/cm_text"
        android:textColorHint="@color/cm_texthint"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/suggestion_contact_text"
        android:textColor="@color/mesuggestion_title_text"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_suggestion_contact"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/suggestion_phoneormail_hint"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/cm_text"
        android:textColorHint="@color/cm_texthint"
        android:textSize="15sp" />

</LinearLayout>