<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp" >

    <ImageView
        android:id="@+id/login_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ico_login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_inputeara_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:drawableLeft="@drawable/login_ico_zhanghao"
            android:drawablePadding="5dp"
            android:hint="@string/login_hint_username"
            android:imeOptions="actionNext"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/cm_text"
            android:textColorHint="@color/login_texthint"
            android:textSize="15sp"
            android:text="sa"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_divider_bg" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:background="@null"
            android:drawableLeft="@drawable/login_ico_mima"
            android:drawablePadding="5dp"
            android:hint="@string/login_hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/cm_text"
            android:textColorHint="@color/login_texthint"
            android:textSize="15sp"
            android:text="123456"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_divider_bg" />

        <EditText
            android:id="@+id/et_login_comcode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:background="@null"
            android:drawableLeft="@drawable/login_ico_qiyedaima"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/login_hint_comcode"
            android:imeOptions="actionDone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/cm_text"
            android:textColorHint="@color/login_texthint"
            android:textSize="15sp"
            android:text="emw"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_login_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:button="@drawable/cm_multi_select1"
        android:text="&#160;&#160;记住密码"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:checked="true"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/login_button_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_copy_right_en"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/login_copy_right_ch"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>