<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cm_bg"
    android:orientation="vertical" >

    <include layout="@layout/cm_header_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/contact_moreinfo_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/personmore_name_text"
                android:textColor="@color/cm_text"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/contact_other_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/list_btn_next"
                android:gravity="center"
                android:text="@string/personmore_add_text"
                android:textColor="@color/cm_text"
                android:textSize="14sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_click"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:background="@drawable/btn_corners_red"
        android:text="@string/personmore_cancelfollow_text"
        android:textColor="@color/white"
        android:textSize="15sp"/>

</LinearLayout>